fixed spacing on heading

--- a/sass/components/_headings.scss
+++ b/sass/components/_headings.scss
@@ -5,7 +5,7 @@
   letter-spacing: 0.472rem;
 
   span {
-    margin-right: 0.5em;
+    margin-right: 0.3rem;
     font-family: var(--font-label);
     color: var(--color-highlight-3);
     text-shadow: var(--text-shadow-techno);
